# StackWarden

./: .gitignore  MANIFEST.in  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
apps/api/: README.md  run_web.py
apps/cli/: README.md
apps/web/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
docs/: README.md  cli_release_review.md  cli_wizard_parity_matrix.md  cli_wizard_usage.md  devlog.md  hardware_detection_matrix.md  reference.md  repository_layout.md
docs/adr/: intent-first-contract.md
docs/audit/: README.md  baseline-checklist.md  boundary-uniformity.md  closure-report.md  consistency-standardization.md  contract-canonicalization.md  findings-register.md  issue-ticket-template.md  legacy-orphan-analysis.md  pr-batch-template.md  remediation-roadmap.md
docs/examples/: README.md  example_plans.md
docs/metrics/: intent-first-metrics.md
docs/project-report/: 01-philosophy-and-principles.md  02-system-architecture.md  03-cli-architecture.md  04-web-api-architecture.md  05-web-ui-architecture.md  06-cross-layer-interactions.md  07-design-decisions-and-adrs.md  08-onboarding-guide.md  09-testing-and-quality-strategy.md  10-glossary-and-concepts.md  README.md
notebooks/: demo.ipynb
ops/scripts/: diagnose_metadata.py  generate_contract_types.py  milestone_gates.sh  recycle_services.sh  service_lib.sh  standup_services.sh  stress_builds.sh  teardown_services.sh
ops/systemd/: stacksmith-web.service  stackwarden-web.service
services/embedding_api/: main.py
specs/: README.md
tests/: conftest.py  test_architecture_guards.py  test_block_catalog.py  test_build_integration.py  test_buildx.py  test_catalog.py  test_catalog_migrations.py  test_cli_artifacts.py  test_cli_blocks.py  test_cli_build_and_wizard.py  test_cli_catalog.py  test_cli_create_wizards.py  test_cli_entity_commands.py  test_cli_exports.py  test_cli_migration.py  test_cli_operations.py  test_cli_parity.py  test_compatibility_rules.py  test_composition.py  test_config_composition.py  test_config_source_overlay.py  test_contract_sync.py  test_create_flow_compat_aliases.py  test_create_flows.py  test_create_wizard_entities.py  test_drift.py  test_ensure_registry_enforcement.py  test_explain.py  test_hardware_catalog.py  test_hashing.py  test_hooks.py  test_immutable.py  test_init.py  test_layer_option_classifier.py  test_legacy_alias_boundaries.py  test_locking.py  test_manifest.py  test_models.py  test_overlay_builder.py  test_prune.py  (+22 more)
tools/: README.md  generate_contract_types.py  milestone_gates.sh  service_lib.sh  standup_services.sh  teardown_services.sh
(+206 files in other folders)
